# tarot-card-game

./: .gitattributes  .gitignore  README.md  global.gd  global.gd.uid  icon.svg.import  project.godot
assets/: BG Shop.png.import  BG_short_words.png.import  BG_word.png.import  Menu_1.png.import  background.png.import
assets/Menu/: Menu_1.png.import
assets/card/: card.gltf  card.gltf.import  card.jpg.import  card_diffuse.png.import  card_roughness_metallic.png.import
assets/elements/: 4 elements-Coins.png.import  4 elements-Cup.png.import  (+2 more)
frames_to_atlas/: CMakeLists.txt
frames_to_atlas/src/: Main.cpp
graphics/: Keys.png.import  Menu_1.png.import  Menu_2.png.import  Menu_3.png.import  Menu_4.png.import  background.webp.import  background_1.png.import  background_2.png.import  background_3.png.import
menu/: label.gd.uid  menu.gd  menu.gd.uid  menu.tscn  shop.gd  shop.gd.uid  shop.tscn
scenes/: Overlay.tscn  background.tscn  base_table.tscn  button.tscn  card.tscn  card_game.tscn  deck.tscn  defeat.tscn  elemental_card.tscn  home_path3D.tscn  major_arcana_card.tscn  overlay.tscn  playing_table.tscn  table.tscn  victory.tscn
scripts/: animate_path.gd  animate_path.gd.uid  card.gd  card.gd.uid  card_area_3d.gd.uid  card_game.gd  card_game.gd.uid  defeat.gd  defeat.gd.uid  game_logic.gd  game_logic.gd.uid  global.gd  global.gd.uid  home_path.gd  home_path.gd.uid  major_arcana.gd  major_arcana.gd.uid  overlay.gd  overlay.gd.uid  table.gd  table.gd.uid  texture.gd  texture.gd.uid  victory.gd  victory.gd.uid
shaders/: card.gdshader  card.gdshader.uid
(+670 files in other folders)
